--- a/src/wiki/configuração/docs/readme.me
+++ b/src/wiki/configuração/docs/readme.me
@@ -1,1 +1,7 @@
+# Arquivos de configuração ou build 
+
+- .htaccess configuração local do servidor web
+- LocalSettings.php configuração da wiki
+- php.ini configuração do php
+- docs.portainer.txt configuração portainer 
 
